<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:scrollbars="vertical"
    android:fadingEdge="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_banner_black"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_normal"
            android:background="@color/windowBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@mipmap/ic_back"
            app:title="@string/text_setting"
            app:titleTextColor="@color/white"/>
        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/windowBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:onClick="onClearClick">
            <ImageButton
                android:layout_gravity="end|center"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20.0dip"
                android:src="@drawable/clean"
                android:scaleType="fitCenter"
                android:onClick="onClearClick" />
            <Button
                android:gravity="center|left"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/white"
                android:text="@string/text_clean"
                android:onClick="onClearClick" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/windowBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:onClick="onVersionClick">
            <ImageButton
                android:layout_gravity="end|center"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:src="@drawable/update"
                android:scaleType="fitCenter"
                android:onClick="onVersionClick" />
            <Button
                android:gravity="center|left"
                android:background="#00000000"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:text="@string/text_update"
                android:onClick="onVersionClick" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/windowBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1.0dip"
            android:onClick="onRemarkClick">
            <ImageButton
                android:layout_gravity="end|center"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:src="@drawable/favorable"
                android:scaleType="fitCenter"
                android:onClick="onRemarkClick" />
            <Button
                android:textStyle="bold"
                android:gravity="center|left"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:text="@string/text_evaluate"
                android:onClick="onRemarkClick" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/windowBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:onClick="onRoastClick">
            <ImageButton
                android:layout_gravity="end|center"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:src="@drawable/feedback"
                android:scaleType="fitCenter"
                android:onClick="onRoastClick" />
            <Button
                android:gravity="center|left"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:text="@string/text_feedback"
                android:onClick="onRoastClick" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/windowBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:onClick="onAgreementClick">
            <ImageButton
                android:layout_gravity="end|center"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:src="@drawable/agreement"
                android:scaleType="fitCenter"
                android:onClick="onAgreementClick" />
            <Button
                android:gravity="center|left"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:text="@string/text_agreement"
                android:onClick="onAgreementClick" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/windowBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1.0dip"
            android:onClick="onPrivacyClick">
            <ImageButton
                android:layout_gravity="end|center"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:src="@drawable/privacy"
                android:scaleType="fitCenter"
                android:onClick="onPrivacyClick" />
            <Button
                android:gravity="center|left"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:text="@string/text_privacy"
                android:onClick="onPrivacyClick" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/windowBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1.0dip"
            android:onClick="onAboutClick">
            <ImageButton
                android:layout_gravity="end|center"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:src="@drawable/about"
                android:scaleType="fitCenter"
                android:onClick="onAboutClick" />
            <Button
                android:gravity="center|left"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:text="@string/text_about"
                android:onClick="onAboutClick" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_marginBottom="10.0dip">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="80.0dip"
                android:layout_height="wrap_content">
                <ImageButton
                    android:background="#00000000"
                    android:layout_width="match_parent"
                    android:layout_height="40.0dip"
                    android:src="@drawable/weibo"
                    android:scaleType="fitCenter"
                    android:onClick="btnWeiboClick" />
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="关注微博"
                    android:onClick="btnWeiboClick" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="80.0dip"
                android:layout_height="wrap_content">
                <ImageButton
                    android:background="#00000000"
                    android:layout_width="match_parent"
                    android:layout_height="40.0dip"
                    android:src="@drawable/qq"
                    android:scaleType="fitCenter"
                    android:onClick="btnQQgroup" />
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="加入群聊"
                    android:onClick="btnQQgroup" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>